Sounds, kit edits, new command and easier config access

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -18,6 +18,9 @@ commands:
   setarena:
     description: Sets the arena location
     permission: oitc.admin
+  setend:
+    description: Sets the end lobby location
+    permission: oitc.admin
 
 permissions:
   oitc.admin:
